tests/baselines/reference/indexSignatureWithAccessibilityModifier.errors.txt
==== tests/cases/compiler/indexSignatureWithAccessibilityModifier.ts (4 errors) ====
    interface I {
        [public x: string]: string;
         ~~~~~~~~~~~~~~~~
!!! indexSignatureWithAccessibilityModifier.ts(2,6): error TS1018: Index signature parameter cannot have accessibility modifiers.
         ~~~~~~
!!! indexSignatureWithAccessibilityModifier.ts(2,6): error TS2246: A parameter property is only allowed in a constructor implementation.
    }
    
    class C {
        [public x: string]: string
         ~~~~~~~~~~~~~~~~
!!! indexSignatureWithAccessibilityModifier.ts(6,6): error TS1018: Index signature parameter cannot have accessibility modifiers.
         ~~~~~~
!!! indexSignatureWithAccessibilityModifier.ts(6,6): error TS2246: A parameter property is only allowed in a constructor implementation.
    }